[package]
name = "sytags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "sytags"
path = "src/lib.rs"

[[bin]]
name = "syviews"
path = "src/bin/syviews.rs"

[dependencies]
libxml = "0.3.3"
scraper = "0.18.1"
